[gd_scene load_steps=13 format=2]

[ext_resource path="res://image_password/images/1.png" type="Texture" id=1]
[ext_resource path="res://image_password/images/Phone.png" type="Texture" id=2]
[ext_resource path="res://image_password/images/Up2.png" type="Texture" id=3]
[ext_resource path="res://image_password/images/Down2.png" type="Texture" id=4]
[ext_resource path="res://image_password/image_password.gd" type="Script" id=5]
[ext_resource path="res://new_dynamicfontsmall.tres" type="DynamicFont" id=6]
[ext_resource path="res://image_password/images/Left2.png" type="Texture" id=7]
[ext_resource path="res://image_password/images/Right2.png" type="Texture" id=8]
[ext_resource path="res://Scene/PopupWin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/PopupLose.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scene/PopupWin.gd" type="Script" id=11]
[ext_resource path="res://Scene/PopupLose.gd" type="Script" id=12]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="win" parent="." instance=ExtResource( 9 )]
margin_left = -7.86612
margin_top = -95.5171
margin_right = -7.86612
margin_bottom = -95.5171
script = ExtResource( 11 )

[node name="lose" parent="." instance=ExtResource( 10 )]
margin_left = -7.86612
margin_top = -95.8916
margin_right = -7.86612
margin_bottom = -95.8916
script = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 135.0
color = Color( 0.686275, 0.603922, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select2" type="ColorRect" parent="ColorRect"]
visible = false
margin_left = 73.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 87.0
color = Color( 0.313726, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select3" type="ColorRect" parent="ColorRect"]
visible = false
margin_left = 130.0
margin_top = 40.0
margin_right = 177.0
margin_bottom = 87.0
color = Color( 0.313726, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select4" type="ColorRect" parent="ColorRect"]
visible = false
margin_left = 188.0
margin_top = 40.0
margin_right = 235.0
margin_bottom = 87.0
color = Color( 0.313726, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 115.134, 66.2441 )
scale = Vector2( 0.143461, 0.13944 )
texture = ExtResource( 2 )

[node name="select1" type="Polygon2D" parent="."]
position = Vector2( -14.5, 0.5 )
color = Color( 1, 0.831373, 0.976471, 1 )
polygon = PoolVector2Array( 101.64, 66.0389, 114.063, 65.744, 114.242, 77.6431, 101.763, 77.7218 )

[node name="select2" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0.831373, 0.976471, 1 )
polygon = PoolVector2Array( 101.602, 66.1724, 114.088, 65.9935, 114.214, 77.7877, 101.674, 77.9427 )

[node name="select3" type="Polygon2D" parent="."]
visible = false
position = Vector2( 14.5, -0.2 )
color = Color( 1, 0.831373, 0.976471, 1 )
polygon = PoolVector2Array( 101.602, 66.1724, 114.088, 65.9935, 114.223, 77.9334, 101.674, 77.9427 )

[node name="select4" type="Polygon2D" parent="."]
visible = false
position = Vector2( 28.5, -0.2 )
color = Color( 1, 0.831373, 0.976471, 1 )
polygon = PoolVector2Array( 102.098, 65.9852, 108.482, 65.7509, 114.514, 65.8095, 114.573, 77.6991, 102.039, 77.8162 )

[node name="pic1" type="Sprite" parent="."]
position = Vector2( 93.567, 71.8 )
scale = Vector2( 0.13009, 0.130139 )
texture = ExtResource( 1 )

[node name="pic2" type="Sprite" parent="."]
position = Vector2( 107.826, 71.5 )
scale = Vector2( 0.139497, 0.126632 )
texture = ExtResource( 1 )

[node name="pic3" type="Sprite" parent="."]
position = Vector2( 122.284, 71.5 )
scale = Vector2( 0.136281, 0.126632 )
texture = ExtResource( 1 )

[node name="pic4" type="Sprite" parent="."]
position = Vector2( 136.826, 71.5 )
scale = Vector2( 0.139497, 0.126632 )
texture = ExtResource( 1 )

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
visible = false
margin_left = 74.0
margin_top = 41.0
margin_right = 535.0
margin_bottom = 496.0
rect_scale = Vector2( 0.1, 0.1 )
border_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect3" type="ReferenceRect" parent="."]
visible = false
margin_left = 131.0
margin_top = 41.0
margin_right = 591.0
margin_bottom = 501.0
rect_scale = Vector2( 0.1, 0.1 )
border_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect4" type="ReferenceRect" parent="."]
visible = false
margin_left = 188.0
margin_top = 42.0
margin_right = 638.0
margin_bottom = 489.0
rect_scale = Vector2( 0.1, 0.1 )
border_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 204.0
margin_top = 121.0
margin_right = 250.0
margin_bottom = 135.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "[Esc] Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 186.0
margin_top = 111.0
margin_right = 258.0
margin_bottom = 125.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 6 )
text = "[Enter] Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up" type="Sprite" parent="."]
visible = false
position = Vector2( 114.703, 101.253 )
scale = Vector2( 0.143375, 0.13294 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="up"]
wait_time = 0.2

[node name="down" type="Sprite" parent="."]
visible = false
position = Vector2( 115.819, 118.226 )
scale = Vector2( 0.143379, 0.13728 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="down"]
wait_time = 0.2

[node name="left" type="Sprite" parent="."]
visible = false
position = Vector2( 107.219, 110.904 )
scale = Vector2( 0.140783, 0.138223 )
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="left"]
wait_time = 0.2

[node name="right" type="Sprite" parent="."]
visible = false
position = Vector2( 124.143, 108.863 )
scale = Vector2( 0.143066, 0.138265 )
texture = ExtResource( 8 )

[node name="Timer" type="Timer" parent="right"]
wait_time = 0.2
[connection signal="timeout" from="up/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="down/Timer" to="." method="_on_Timer_timeout_down"]
[connection signal="timeout" from="left/Timer" to="." method="_on_Timer_timeout_left"]
[connection signal="timeout" from="right/Timer" to="." method="_on_Timer_timeout_right"]
